--- a/eng/targets/FunctionalTestWithAssets.targets
+++ b/eng/targets/FunctionalTestWithAssets.targets
@@ -10,7 +10,7 @@
   -->
   <Target Name="PublishTestAssets"
       BeforeTargets="Build;Publish;RunTests;VSTest"
-      Condition=" '@(TestAssetProjectReference->Count())' != '0' ">
+      Condition=" '$(ExcludeFromBuild)' != 'true' AND '@(TestAssetProjectReference->Count())' != '0' ">
     <ItemGroup>
       <_ProjectsToPublish Include="@(TestAssetProjectReference)" />
 
