!fixup! Skip test asset builds in source-build - targets ran even if regular `@(ProjectReference)` items had been ignored

--- a/eng/targets/FunctionalTestWithAssets.targets
+++ b/eng/targets/FunctionalTestWithAssets.targets
@@ -10,7 +10,9 @@
   -->
   <Target Name="PublishTestAssets"
       BeforeTargets="Build;Publish;RunTests;VSTest"
-      Condition=" '$(ExcludeFromBuild)' != 'true' AND '@(TestAssetProjectReference->Count())' != '0' ">
+      Condition=" '$(ExcludeFromBuild)' != 'true' AND
+        '$(DotNetBuildFromSource)' != 'true' AND
+        '@(TestAssetProjectReference->Count())' != '0' ">
     <ItemGroup>
       <_ProjectsToPublish Include="@(TestAssetProjectReference)" />
 
