--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -234,13 +234,12 @@ stages:
                 $(WindowsSignLogArgs)
         displayName: Code sign packages
 
-      # Windows installers bundle both x86 and x64 assets
+      # Windows installers bundle x86/x64/arm64 assets
       - script: ./eng/build.cmd
                 -ci
                 -noBuildRepoTasks
                 -sign
                 -buildInstallers
-                -noBuildNative
                 /p:DotNetSignType=$(_SignType)
                 $(_BuildArgs)
                 $(_InternalRuntimeDownloadArgs)
