Stop building installers in parallel

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -241,6 +241,7 @@ stages:
                 -sign
                 -buildInstallers
                 /p:DotNetSignType=$(_SignType)
+                /p:BuildInParallel=false
                 $(_BuildArgs)
                 $(_InternalRuntimeDownloadArgs)
                 $(WindowsInstallersLogArgs)
