Try just no parallel

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -240,6 +240,7 @@ stages:
                 -noBuildRepoTasks
                 -sign
                 -buildInstallers
+                -noBuildNative
                 /p:DotNetSignType=$(_SignType)
                 /p:BuildInParallel=false
                 $(_BuildArgs)
