--- a/src/Installers/Rpm/Directory.Build.targets
+++ b/src/Installers/Rpm/Directory.Build.targets
@@ -79,11 +79,19 @@
     <Exec Command="scl enable rh-ruby25 'fpm @(FpmArgs,' ')'" />
 
     <Copy SourceFiles="$(TargetPath)"
-          DestinationFiles="$(CblMarinerTargetPath);$(CblMariner2TargetPath)"
+          DestinationFiles="$(CblMarinerTargetPath)"
           OverwriteReadOnlyFiles="True"
           SkipUnchangedFiles="False"
           UseHardlinksIfPossible="False" />
 
     <Message Text="$(TargetPath) -> $(CblMarinerTargetPath)" Importance="high" />
+
+    <Copy SourceFiles="$(TargetPath)"
+          DestinationFiles="$(CblMariner2TargetPath)"
+          OverwriteReadOnlyFiles="True"
+          SkipUnchangedFiles="False"
+          UseHardlinksIfPossible="False" />
+
+    <Message Text="$(TargetPath) -> $(CblMariner2TargetPath)" Importance="high" />
   </Target>
 </Project>
