Address PR feedback

--- a/src/Middleware/RequestDecompression/src/Microsoft.AspNetCore.RequestDecompression.csproj
+++ b/src/Middleware/RequestDecompression/src/Microsoft.AspNetCore.RequestDecompression.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="Microsoft.AspNetCore.RequestDecompression.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Include="$(RepoRoot)src\Shared\TaskToApm.cs" Link="TaskToApm.cs" />
   </ItemGroup>
 
