--- a/src/Installers/Rpm/Directory.Build.targets
+++ b/src/Installers/Rpm/Directory.Build.targets
@@ -85,5 +85,13 @@
           UseHardlinksIfPossible="False" />
 
     <Message Text="$(TargetPath) -> $(CblMarinerTargetPath)" Importance="high" />
+
+    <Copy SourceFiles="$(TargetPath)"
+          DestinationFiles="$(CblMariner2TargetPath)"
+          OverwriteReadOnlyFiles="True"
+          SkipUnchangedFiles="False"
+          UseHardlinksIfPossible="False" />
+
+    <Message Text="$(TargetPath) -> $(CblMariner2TargetPath)" Importance="high" />
   </Target>
 </Project>
