--- a/src/Installers/Rpm/Directory.Build.props
+++ b/src/Installers/Rpm/Directory.Build.props
@@ -8,6 +8,8 @@
     <!-- Output paths -->
     <IntermediateOutputPath>$(IntermediateOutputPath)$(TargetRuntimeIdentifier)\</IntermediateOutputPath>
     <OutputPath>$(InstallersOutputPath)</OutputPath>
+    <CblMariner1VersionSuffix>-cm.1</CblMariner1VersionSuffix>
+    <CblMariner2VersionSuffix>-cm.2</CblMariner2VersionSuffix>
 
     <!-- All installers are shipping assets. -->
     <IsShipping>true</IsShipping>
