--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -486,13 +486,12 @@ stages:
             $(_InternalRuntimeDownloadArgs)
         displayName: Run build.sh
       - script: git clean -xfd src/**/obj/;
-          ./dockerbuild.sh rhel --ci --arch arm64 --build-installers --no-build-deps --no-build-nodejs
+          ./dockerbuild.sh rhel --ci --nobl --arch arm64 --build-installers --no-build-deps --no-build-nodejs
           -p:OnlyPackPlatformSpecificPackages=true -p:BuildRuntimeArchive=false -p:LinuxInstallerType=rpm
           -p:AssetManifestFileName=aspnetcore-Linux_arm64.xml
           $(_BuildArgs)
           $(_PublishArgs)
           $(_InternalRuntimeDownloadArgs)
-          /bl:artifacts/log/Release/Build.Installers.binlog
         displayName: Build RPM installers
       installNodeJs: false
       artifacts:
