--- a/src/SignalR/clients/ts/FunctionalTests/package.json
+++ b/src/SignalR/clients/ts/FunctionalTests/package.json
@@ -54,7 +54,8 @@
   },
   "resolutions": {
     "lodash": ">=4.17.21",
-    "url-parse": ">=1.5.0"
+    "url-parse": ">=1.5.6",
+    "node-fetch": ">=2.6.7"
   },
   "author": "",
   "license": "MIT"
