--- a/src/SignalR/clients/ts/signalr-protocol-msgpack/package.json
+++ b/src/SignalR/clients/ts/signalr-protocol-msgpack/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {},
   "resolutions": {
-    "url-parse": ">=1.5.0"
+    "url-parse": ">=1.5.6",
+    "node-fetch": ">=2.6.7"
   }
 }
