--- a/src/SignalR/clients/ts/signalr/package.json
+++ b/src/SignalR/clients/ts/signalr/package.json
@@ -54,10 +54,11 @@
     "abort-controller": "^3.0.0",
     "eventsource": "^1.0.7",
     "fetch-cookie": "^0.11.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.7",
     "ws": "^7.4.5"
   },
   "resolutions": {
-    "ansi-regex": "5.0.1"
+    "ansi-regex": "5.0.1",
+    "url-parse": ">=1.5.6"
   }
 }
