[release/3.1] Resolve Component Governance bugs (#40220)
* Resolve Component Governance bugs

* Add LatestPackageReference

* Remove STEW from sharedFx

* Update url-parse

--- a/src/SignalR/clients/ts/FunctionalTests/package.json
+++ b/src/SignalR/clients/ts/FunctionalTests/package.json
@@ -52,7 +52,8 @@
     "sauce": "yarn run test:sauce"
   },
   "resolutions": {
-    "lodash": ">=4.7.14"
+    "lodash": ">=4.7.14",
+    "url-parse": ">=1.5.6"
   },
   "author": "",
   "license": "Apache-2.0"
