--- a/src/SignalR/clients/ts/signalr/package.json
+++ b/src/SignalR/clients/ts/signalr/package.json
@@ -55,5 +55,8 @@
     "eventsource": "^1.0.7",
     "request": "^2.88.0",
     "ws": "^6.0.0"
+  },
+  "resolutions": {
+    "url-parse": ">=1.5.6"
   }
 }
