--- a/src/Components/Web.JS/package.json
+++ b/src/Components/Web.JS/package.json
@@ -34,6 +34,7 @@
   "resolutions": {
     "**/set-value": "^2.0.1",
     "lodash": ">=4.17.21",
-    "url-parse": ">=1.5.0"
+    "url-parse": ">=1.5.6",
+    "node-fetch": ">=2.6.7"
   }
 }
