--- a/eng/TrimmableProjects.props
+++ b/eng/TrimmableProjects.props
@@ -9,6 +9,7 @@
   <ItemGroup>
     <TrimmableProject Include="Microsoft.Net.Http.Headers" />
     <TrimmableProject Include="Microsoft.AspNetCore.Http.Abstractions" />
+    <TrimmableProject Include="Microsoft.AspNetCore.Http.Extensions" />
     <TrimmableProject Include="Microsoft.AspNetCore.Http.Features" />
     <TrimmableProject Include="Microsoft.AspNetCore.Metadata" />
     <TrimmableProject Include="Microsoft.AspNetCore.WebUtilities" />
