--- a/eng/Build.props
+++ b/eng/Build.props
@@ -77,6 +77,7 @@
         <!-- Build the targeting pack installers -->
         <ProjectToBuild Include="$(RepoRoot)src\Installers\Windows\TargetingPack\TargetingPack.wixproj" AdditionalProperties="Platform=x64" />
         <ProjectToBuild Include="$(RepoRoot)src\Installers\Windows\TargetingPack\TargetingPack.wixproj" AdditionalProperties="Platform=x86" />
+        <ProjectToBuild Include="$(RepoRoot)src\Installers\Windows\TargetingPack\TargetingPack.wixproj" AdditionalProperties="Platform=arm64" />
         <!-- This really shouldn't be here, but instead of harvesting from the intermediate/output directories, the targetting pack installer logic
         harvests from a zip of the reference assemblies. Producing it in each leg ends up with multiple targeting packs
         getting produced and the BAR will reject the build. Centralize building the targeting pack in the x86/x64 leg. -->
