Revert "Working ANCM arm64 installers (#39523)"
This reverts commit b4ccd7ba89e02565b68422cecc4154a96c19fb7e.

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -234,7 +234,7 @@ stages:
                 $(WindowsSignLogArgs)
         displayName: Code sign packages
 
-      # Windows installers bundle x86/x64/arm64 assets
+      # Windows installers bundle both x86 and x64 assets
       - script: ./eng/build.cmd
                 -ci
                 -noBuildRepoTasks
@@ -242,7 +242,6 @@ stages:
                 -buildInstallers
                 -noBuildNative
                 /p:DotNetSignType=$(_SignType)
-                /p:BuildInParallel=false
                 $(_BuildArgs)
                 $(_InternalRuntimeDownloadArgs)
                 $(WindowsInstallersLogArgs)
