Revert "Avoid duplicate targeting-pack RPM Build"
This reverts commit 7bebff5b0f77e69b49fd04fd5ffd52f4bcf72241

--- a/src/Installers/Rpm/Directory.Build.targets
+++ b/src/Installers/Rpm/Directory.Build.targets
@@ -33,12 +33,7 @@
     </RpmBuildDependsOn>
   </PropertyGroup>
 
-  <!-- Do not build platform-neutral targeting-pack RPM in arm64 build. -->
-  <Target Name="Build"
-      Condition=" '$(MSBuildProjectName)' == 'Rpm.TargetingPack' AND '$(TargetRuntimeIdentifier)' == 'linux-arm64' "/>
-  <Target Name="Build"
-      Condition=" !('$(MSBuildProjectName)' == 'Rpm.TargetingPack' AND '$(TargetRuntimeIdentifier)' == 'linux-arm64') "
-      DependsOnTargets="RpmBuild"/>
+  <Target Name="Build" DependsOnTargets="RpmBuild" />
   <Target Name="Pack" />
 
   <Target Name="RpmBuild" DependsOnTargets="$(RpmBuildDependsOn)">
