--- a/src/Installers/Rpm/Directory.Build.props
+++ b/src/Installers/Rpm/Directory.Build.props
@@ -8,7 +8,7 @@
     <!-- Output paths -->
     <IntermediateOutputPath>$(IntermediateOutputPath)$(TargetRuntimeIdentifier)\</IntermediateOutputPath>
     <OutputPath>$(InstallersOutputPath)</OutputPath>
-    
+
     <CblMariner1VersionSuffix>-cm.1</CblMariner1VersionSuffix>
     <CblMariner2VersionSuffix>-cm.2</CblMariner2VersionSuffix>
 
@@ -17,7 +17,7 @@
     <IsPackable>true</IsPackable>
 
     <!-- RPM files are platform-specific and should be named appropriately. -->
-    <RpmArch Condition=" '$(TargetArchitecture)' == 'x64' ">amd64</RpmArch>
+    <RpmArch Condition=" '$(TargetArchitecture)' == 'x64' ">x64</RpmArch>
     <RpmArch Condition=" '$(TargetArchitecture)' == 'arm64' ">aarch64</RpmArch>
   </PropertyGroup>
 </Project>
