--- a/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
+++ b/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
@@ -9,13 +9,13 @@
   "devDependencies": {
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "msal": "^1.2.1"
   },
   "resolutions": {
-    "tar": ">=4.4.18"
+    "chokidar": ">=3.5.3"
   }
 }
