Publish some installer artifacts

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -265,6 +265,12 @@ stages:
         includeForks: true
       - name: Windows_Packages
         path: artifacts/packages/
+      - name: Windows_HostingBundle
+        path: artifacts/bin/WindowsHostingBundle
+      - name: Windows_ANCM
+        path: artifacts/bin/ANCMv2
+      - name: Windows_ANCMIISExpress
+        path: artifacts/bin/AncmIISExpress
 
   # Build Windows ARM
   - template: jobs/default-build.yml
